Mi segunda versión.

--- a/javascript.html
+++ b/javascript.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<script>
-	document.write("Hola mundo, soy Pablo Del Corral.");
+	document.write("Hola mundo, soy Pablo Del Corral.!");
 	</script>
 </body>
 </html>
